// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountPage displays loading while accounts is empty 1`] = `
<div>
  <div>
    <div
      data-testid="Loading"
    />
  </div>
</div>
`;

exports[`AccountPage renders as expected with account 1`] = `
<div>
  <div
    data-testid="Header"
  />
  <div
    data-testid="IEInfo"
  />
  <div
    class="card p-0 mt-4 bg-light-100 dark:bg-dark-800"
  >
    <div
      data-testid="TransactionsTable"
    />
  </div>
</div>
`;
